@@ -15,6 +15,7 @@
  * Better Acl display, comments on relations.
  * Support for 'to_date' on time object with proper timezone translation. <===== TODO: Document
  * Time to 'year' should use timezone.
+ * Added tprefix to [select] (with default value) to ease translated options for select. <===== TODO: Document
 
 == 1.1.3 2011-11-09
 
